Fix for Console overflow if you have any content before the `doctype` declaration and some other minor CSS fixes. Add a few additional export plugins to Adminer.

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,10 @@ body.tracyHidden:before {
     font: inherit;
 }
 
+.tracy-inner {
+    height: 100% !important;
+}
+
 .tracy-inner:not(.tracy-icons):not(.tracy-label):not(.ace_editor) {
     font: normal normal 13px/1.3 Arial, sans-serif !important;
 }
